syntax = "proto3";

package bank;

option go_package = "./authentication";

service AuthenticationService {
    rpc Register(UserRequest) returns (RegisterResponse);
    rpc Login(UserRequest) returns (LoginResponse);
    rpc UpdatePassword(UpdatePasswordRequest) returns (UpdatePasswordResponse);
}

message User {
    string username = 1;
    string password = 2;
}

message UserRequest {
    User user = 1;
}

message LoginResponse {
    bool result = 1;
}

message RegisterResponse {
    bool result = 1;
}

message UpdatePasswordRequest {
    User user = 1;
    string newPassword = 2;
}

message UpdatePasswordResponse {
    User user = 1;
}